--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -56,37 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 207,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'data': array([[1.423e+01, 1.710e+00, 2.430e+00, ..., 1.040e+00, 3.920e+00,\n",
-      "        1.065e+03],\n",
-      "       [1.320e+01, 1.780e+00, 2.140e+00, ..., 1.050e+00, 3.400e+00,\n",
-      "        1.050e+03],\n",
-      "       [1.316e+01, 2.360e+00, 2.670e+00, ..., 1.030e+00, 3.170e+00,\n",
-      "        1.185e+03],\n",
-      "       ...,\n",
-      "       [1.327e+01, 4.280e+00, 2.260e+00, ..., 5.900e-01, 1.560e+00,\n",
-      "        8.350e+02],\n",
-      "       [1.317e+01, 2.590e+00, 2.370e+00, ..., 6.000e-01, 1.620e+00,\n",
-      "        8.400e+02],\n",
-      "       [1.413e+01, 4.100e+00, 2.740e+00, ..., 6.100e-01, 1.600e+00,\n",
-      "        5.600e+02]]), 'target': array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-      "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2,\n",
-      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-      "       2, 2]), 'frame': None, 'target_names': array(['class_0', 'class_1', 'class_2'], dtype='<U7'), 'DESCR': '.. _wine_dataset:\\n\\nWine recognition dataset\\n------------------------\\n\\n**Data Set Characteristics:**\\n\\n:Number of Instances: 178\\n:Number of Attributes: 13 numeric, predictive attributes and the class\\n:Attribute Information:\\n    - Alcohol\\n    - Malic acid\\n    - Ash\\n    - Alcalinity of ash\\n    - Magnesium\\n    - Total phenols\\n    - Flavanoids\\n    - Nonflavanoid phenols\\n    - Proanthocyanins\\n    - Color intensity\\n    - Hue\\n    - OD280/OD315 of diluted wines\\n    - Proline\\n    - class:\\n        - class_0\\n        - class_1\\n        - class_2\\n\\n:Summary Statistics:\\n\\n============================= ==== ===== ======= =====\\n                                Min   Max   Mean     SD\\n============================= ==== ===== ======= =====\\nAlcohol:                      11.0  14.8    13.0   0.8\\nMalic Acid:                   0.74  5.80    2.34  1.12\\nAsh:                          1.36  3.23    2.36  0.27\\nAlcalinity of Ash:            10.6  30.0    19.5   3.3\\nMagnesium:                    70.0 162.0    99.7  14.3\\nTotal Phenols:                0.98  3.88    2.29  0.63\\nFlavanoids:                   0.34  5.08    2.03  1.00\\nNonflavanoid Phenols:         0.13  0.66    0.36  0.12\\nProanthocyanins:              0.41  3.58    1.59  0.57\\nColour Intensity:              1.3  13.0     5.1   2.3\\nHue:                          0.48  1.71    0.96  0.23\\nOD280/OD315 of diluted wines: 1.27  4.00    2.61  0.71\\nProline:                       278  1680     746   315\\n============================= ==== ===== ======= =====\\n\\n:Missing Attribute Values: None\\n:Class Distribution: class_0 (59), class_1 (71), class_2 (48)\\n:Creator: R.A. Fisher\\n:Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\\n:Date: July, 1988\\n\\nThis is a copy of UCI ML Wine recognition datasets.\\nhttps://archive.ics.uci.edu/ml/machine-learning-databases/wine/wine.data\\n\\nThe data is the results of a chemical analysis of wines grown in the same\\nregion in Italy by three different cultivators. There are thirteen different\\nmeasurements taken for different constituents found in the three types of\\nwine.\\n\\nOriginal Owners:\\n\\nForina, M. et al, PARVUS -\\nAn Extendible Package for Data Exploration, Classification and Correlation.\\nInstitute of Pharmaceutical and Food Analysis and Technologies,\\nVia Brigata Salerno, 16147 Genoa, Italy.\\n\\nCitation:\\n\\nLichman, M. (2013). UCI Machine Learning Repository\\n[https://archive.ics.uci.edu/ml]. Irvine, CA: University of California,\\nSchool of Information and Computer Science.\\n\\n.. dropdown:: References\\n\\n    (1) S. Aeberhard, D. Coomans and O. de Vel,\\n    Comparison of Classifiers in High Dimensional Settings,\\n    Tech. Rep. no. 92-02, (1992), Dept. of Computer Science and Dept. of\\n    Mathematics and Statistics, James Cook University of North Queensland.\\n    (Also submitted to Technometrics).\\n\\n    The data was used with many others for comparing various\\n    classifiers. The classes are separable, though only RDA\\n    has achieved 100% correct classification.\\n    (RDA : 100%, QDA 99.4%, LDA 98.9%, 1NN 96.1% (z-transformed data))\\n    (All results using the leave-one-out technique)\\n\\n    (2) S. Aeberhard, D. Coomans and O. de Vel,\\n    \"THE CLASSIFICATION PERFORMANCE OF RDA\"\\n    Tech. Rep. no. 92-01, (1992), Dept. of Computer Science and Dept. of\\n    Mathematics and Statistics, James Cook University of North Queensland.\\n    (Also submitted to Journal of Chemometrics).\\n', 'feature_names': ['alcohol', 'malic_acid', 'ash', 'alcalinity_of_ash', 'magnesium', 'total_phenols', 'flavanoids', 'nonflavanoid_phenols', 'proanthocyanins', 'color_intensity', 'hue', 'od280/od315_of_diluted_wines', 'proline']}\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -132,7 +105,7 @@
        "[178 rows x 14 columns]>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,16 +115,17 @@
     "\n",
     "# Load the Wine dataset\n",
     "wine_data = load_wine()\n",
-    "#print(wine_data)\n",
+    "\n",
     "\n",
     "# Convert to DataFrame\n",
     "wine_df = pd.DataFrame(wine_data.data, columns=wine_data.feature_names)\n",
-    "\n",
     "# Bind the 'class' (wine target) to the DataFrame\n",
+    "wine_df.columns\n",
     "wine_df['class'] = wine_data.target\n",
     "\n",
     "# Display the DataFrame\n",
-    "wine_df.describe\n"
+    "wine_df.describe\n",
+    "#wine_df.columns\n"
    ]
   },
   {
@@ -169,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 208,
    "id": "56916892",
    "metadata": {},
    "outputs": [
@@ -179,14 +153,14 @@
        "178"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your answer here\n",
-    "wine_df.shape[0]"
+    "wine_df.shape[0] # number of rows in data set"
    ]
   },
   {
@@ -199,24 +173,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 209,
    "id": "df0ef103",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['alcohol', 'malic_acid', 'ash', 'alcalinity_of_ash', 'magnesium',\n",
+      "       'total_phenols', 'flavanoids', 'nonflavanoid_phenols',\n",
+      "       'proanthocyanins', 'color_intensity', 'hue',\n",
+      "       'od280/od315_of_diluted_wines', 'proline', 'class'],\n",
+      "      dtype='object')\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "14"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your answer here\n",
-    "wine_df.shape[1]"
+    "print(wine_df.columns) # list all columns\n",
+    "wine_df.shape[1] # total columns in data set\n"
    ]
   },
   {
@@ -229,24 +215,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 210,
    "id": "47989426",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n",
+      "[0 1 2]\n"
+     ]
     }
    ],
    "source": [
     "# Your answer here\n",
-    "wine_df.dtypes['class']"
+    "print(wine_df.dtypes['class']) # data type for class response variable\n",
+    "\n",
+    "print(wine_df[\"class\"].unique()) # unique values for response variable 'class'"
    ]
   },
   {
@@ -260,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 211,
    "id": "bd7b0910",
    "metadata": {},
    "outputs": [
@@ -268,35 +254,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n",
-      "   alcohol  malic_acid   ash  alcalinity_of_ash  magnesium  total_phenols  \\\n",
-      "0    14.23        1.71  2.43               15.6      127.0           2.80   \n",
-      "1    13.20        1.78  2.14               11.2      100.0           2.65   \n",
-      "2    13.16        2.36  2.67               18.6      101.0           2.80   \n",
-      "3    14.37        1.95  2.50               16.8      113.0           3.85   \n",
-      "4    13.24        2.59  2.87               21.0      118.0           2.80   \n",
-      "\n",
-      "   flavanoids  nonflavanoid_phenols  proanthocyanins  color_intensity   hue  \\\n",
-      "0        3.06                  0.28             2.29             5.64  1.04   \n",
-      "1        2.76                  0.26             1.28             4.38  1.05   \n",
-      "2        3.24                  0.30             2.81             5.68  1.03   \n",
-      "3        3.49                  0.24             2.18             7.80  0.86   \n",
-      "4        2.69                  0.39             1.82             4.32  1.04   \n",
-      "\n",
-      "   od280/od315_of_diluted_wines  proline  \n",
-      "0                          3.92   1065.0  \n",
-      "1                          3.40   1050.0  \n",
-      "2                          3.17   1185.0  \n",
-      "3                          3.45   1480.0  \n",
-      "4                          2.93    735.0  \n"
+      "13\n"
      ]
     }
    ],
    "source": [
     "# Your answer here\n",
-    "X = wine_df.iloc[:, :-1]\n",
-    "print(X.shape[1])\n",
-    "print(X.head())"
+    "#X = wine_df.iloc[:, :-1]\n",
+    "print(wine_df.iloc[:, :-1].shape[1]) # total number of predictor variables in data set\n",
+    "#print(X.columns) "
    ]
   },
   {
@@ -320,7 +286,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 212,
+   "id": "4045db0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.sum of      alcohol  malic_acid    ash  alcalinity_of_ash  magnesium  total_phenols  \\\n",
+       "0      False       False  False              False      False          False   \n",
+       "1      False       False  False              False      False          False   \n",
+       "2      False       False  False              False      False          False   \n",
+       "3      False       False  False              False      False          False   \n",
+       "4      False       False  False              False      False          False   \n",
+       "..       ...         ...    ...                ...        ...            ...   \n",
+       "173    False       False  False              False      False          False   \n",
+       "174    False       False  False              False      False          False   \n",
+       "175    False       False  False              False      False          False   \n",
+       "176    False       False  False              False      False          False   \n",
+       "177    False       False  False              False      False          False   \n",
+       "\n",
+       "     flavanoids  nonflavanoid_phenols  proanthocyanins  color_intensity  \\\n",
+       "0         False                 False            False            False   \n",
+       "1         False                 False            False            False   \n",
+       "2         False                 False            False            False   \n",
+       "3         False                 False            False            False   \n",
+       "4         False                 False            False            False   \n",
+       "..          ...                   ...              ...              ...   \n",
+       "173       False                 False            False            False   \n",
+       "174       False                 False            False            False   \n",
+       "175       False                 False            False            False   \n",
+       "176       False                 False            False            False   \n",
+       "177       False                 False            False            False   \n",
+       "\n",
+       "       hue  od280/od315_of_diluted_wines  proline  class  \n",
+       "0    False                         False    False  False  \n",
+       "1    False                         False    False  False  \n",
+       "2    False                         False    False  False  \n",
+       "3    False                         False    False  False  \n",
+       "4    False                         False    False  False  \n",
+       "..     ...                           ...      ...    ...  \n",
+       "173  False                         False    False  False  \n",
+       "174  False                         False    False  False  \n",
+       "175  False                         False    False  False  \n",
+       "176  False                         False    False  False  \n",
+       "177  False                         False    False  False  \n",
+       "\n",
+       "[178 rows x 14 columns]>"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_df.isna().sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
    "id": "cc899b59",
    "metadata": {},
    "outputs": [
@@ -376,7 +402,11 @@
    "id": "403ef0bb",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "**Answer**\n",
+    "\n",
+    "To ensure fair contribution from all variables, we often scale and center data before\n",
+    "entering it into the model. This process, called standardization, adjusts the data so each variable has a mean of 0 and a standard deviation of 1, allowing the model to consider each variable equally based on its relationship to the outcome rather than its scale.\n",
+    "\n"
    ]
   },
   {
@@ -392,7 +422,9 @@
    "id": "fdee5a15",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "**Answer**\n",
+    "\n",
+    "the response variable Class, is a categorical variable and not numeric. We do standardization primarily for continuous numeric variables to ensure fair contribution on scale."
    ]
   },
   {
@@ -405,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 214,
    "id": "5ef2d5ad",
    "metadata": {},
    "outputs": [],
@@ -419,7 +451,10 @@
    "id": "f0676c21",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "**Answer**\n",
+    "\n",
+    " Setting the same seed value guarantees the same results each time the analysis is run. Different seed values result in different random patterns, but the same value ensures consistent results.\n",
+    "\n"
    ]
   },
   {
@@ -434,15 +469,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 215,
    "id": "78a88a6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training  data set shapes: (130, 13) (130,)\n",
+      "Testing set shapes: (48, 13) (48,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a random vector of True and False values to split the data\n",
     "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
+    "#print(split)\n",
+    "# Your code here...\n",
+    "# Define the training set for X (predictors)\n",
+    "training_X = predictors_standardized[split]\n",
     "\n",
-    "# Your code here..."
+    "# Define the training set for Y (response)\n",
+    "training_Y = wine_df.loc[split, 'class']\n",
+    "\n",
+    "# Define the testing set for X (predictors)\n",
+    "testing_X = predictors_standardized[~split]\n",
+    "\n",
+    "# Define the testing set for Y (response)\n",
+    "testing_Y = wine_df.loc[~split, 'class']\n",
+    "\n",
+    "print(\"Training  data set shapes:\", training_X.shape, training_Y.shape)\n",
+    "print(\"Testing set shapes:\", testing_X.shape, testing_Y.shape)\n",
+    "\n"
    ]
   },
   {
@@ -465,12 +524,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "id": "08818c64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best value of n_neighbors is : 12\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here..."
+    "# Your code here...\n",
+    "\n",
+    "knn = KNeighborsClassifier() # initializing knn classifier\n",
+    "k_range = list(range(1, 50)) # grid range from 1 to 50\n",
+    "param_grid = dict(n_neighbors=k_range)\n",
+    "#print(param_grid)\n",
+    "grid = GridSearchCV(knn, param_grid, cv=10, scoring='accuracy', return_train_score=False) # grid search\n",
+    "grid.fit(training_X, training_Y) # model fitting on training data\n",
+    "best_n_neighbors = grid.best_params_['n_neighbors'] # best value of n_neighors\n",
+    "\n",
+    "print(f\"The best value of n_neighbors is : {best_n_neighbors}\")"
    ]
   },
   {
@@ -486,12 +563,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "id": "ffefa9f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of test set is: 0.9375\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here..."
+    "# Your code here...\n",
+    "\n",
+    "knn_opt = KNeighborsClassifier(n_neighbors=best_n_neighbors) # Initialize KNN classifier with the best n_neighbors\n",
+    "knn_opt.fit(training_X, training_Y) # Train the model on the entire training set\n",
+    "y_pred = knn_opt.predict(testing_X) # Make predictions on the test set\n",
+    "accuracy = accuracy_score(testing_Y, y_pred) #Calculate and display the accuracy score\n",
+    "print(f\"The accuracy of test set is: {accuracy:.4f}\")"
    ]
   },
   {
