Added answers for assingment 1

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -33,6 +33,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ec4b874",
+   "metadata": {},
+   "source": [
+    "Refer - https://www.kaggle.com/code/melihkanbay/knn-best-parameters-gridsearchcv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 206,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
