--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 44,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -64,60 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 45,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.describe of      alcohol  malic_acid   ash  alcalinity_of_ash  magnesium  total_phenols  \\\n",
-       "0      14.23        1.71  2.43               15.6      127.0           2.80   \n",
-       "1      13.20        1.78  2.14               11.2      100.0           2.65   \n",
-       "2      13.16        2.36  2.67               18.6      101.0           2.80   \n",
-       "3      14.37        1.95  2.50               16.8      113.0           3.85   \n",
-       "4      13.24        2.59  2.87               21.0      118.0           2.80   \n",
-       "..       ...         ...   ...                ...        ...            ...   \n",
-       "173    13.71        5.65  2.45               20.5       95.0           1.68   \n",
-       "174    13.40        3.91  2.48               23.0      102.0           1.80   \n",
-       "175    13.27        4.28  2.26               20.0      120.0           1.59   \n",
-       "176    13.17        2.59  2.37               20.0      120.0           1.65   \n",
-       "177    14.13        4.10  2.74               24.5       96.0           2.05   \n",
-       "\n",
-       "     flavanoids  nonflavanoid_phenols  proanthocyanins  color_intensity   hue  \\\n",
-       "0          3.06                  0.28             2.29             5.64  1.04   \n",
-       "1          2.76                  0.26             1.28             4.38  1.05   \n",
-       "2          3.24                  0.30             2.81             5.68  1.03   \n",
-       "3          3.49                  0.24             2.18             7.80  0.86   \n",
-       "4          2.69                  0.39             1.82             4.32  1.04   \n",
-       "..          ...                   ...              ...              ...   ...   \n",
-       "173        0.61                  0.52             1.06             7.70  0.64   \n",
-       "174        0.75                  0.43             1.41             7.30  0.70   \n",
-       "175        0.69                  0.43             1.35            10.20  0.59   \n",
-       "176        0.68                  0.53             1.46             9.30  0.60   \n",
-       "177        0.76                  0.56             1.35             9.20  0.61   \n",
-       "\n",
-       "     od280/od315_of_diluted_wines  proline  class  \n",
-       "0                            3.92   1065.0      0  \n",
-       "1                            3.40   1050.0      0  \n",
-       "2                            3.17   1185.0      0  \n",
-       "3                            3.45   1480.0      0  \n",
-       "4                            2.93    735.0      0  \n",
-       "..                            ...      ...    ...  \n",
-       "173                          1.74    740.0      2  \n",
-       "174                          1.56    750.0      2  \n",
-       "175                          1.56    835.0      2  \n",
-       "176                          1.62    840.0      2  \n",
-       "177                          1.60    560.0      2  \n",
-       "\n",
-       "[178 rows x 14 columns]>"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_wine\n",
     "\n",
@@ -133,7 +83,7 @@
     "\n",
     "# Display the DataFrame\n",
     "wine_df.describe\n",
-    "#wine_df.columns\n"
+    "rows,cols = wine_df.shape\n"
    ]
   },
   {
@@ -151,24 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 46,
    "id": "56916892",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "178"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in data set : 178\n"
+     ]
     }
    ],
    "source": [
     "# Your answer here\n",
-    "wine_df.shape[0] # number of rows in data set"
+    "print(\"Rows in data set :\", rows) # number of rows in data set"
    ]
   },
   {
@@ -181,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 47,
    "id": "df0ef103",
    "metadata": {},
    "outputs": [
@@ -193,24 +140,15 @@
       "       'total_phenols', 'flavanoids', 'nonflavanoid_phenols',\n",
       "       'proanthocyanins', 'color_intensity', 'hue',\n",
       "       'od280/od315_of_diluted_wines', 'proline', 'class'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "Columns in data set :  14\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 209,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your answer here\n",
     "print(wine_df.columns) # list all columns\n",
-    "wine_df.shape[1] # total columns in data set\n"
+    "print(\"Columns in data set : \", cols) # total columns in data set\n"
    ]
   },
   {
@@ -223,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 48,
    "id": "47989426",
    "metadata": {},
    "outputs": [
@@ -231,16 +169,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "int64\n",
-      "[0 1 2]\n"
+      "'class' data type :  int64\n",
+      "Unique values in 'class' column:  [0 1 2]\n"
      ]
     }
    ],
    "source": [
     "# Your answer here\n",
-    "print(wine_df.dtypes['class']) # data type for class response variable\n",
+    "print(\"'class' data type : \",wine_df.dtypes['class']) # data type for class response variable\n",
     "\n",
-    "print(wine_df[\"class\"].unique()) # unique values for response variable 'class'"
+    "print(\"Unique values in 'class' column: \",wine_df[\"class\"].unique()) # unique values for response variable 'class'"
    ]
   },
   {
@@ -254,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 49,
    "id": "bd7b0910",
    "metadata": {},
    "outputs": [
@@ -262,14 +200,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "Total number of predictor variables in data set : 13\n"
      ]
     }
    ],
    "source": [
     "# Your answer here\n",
     "#X = wine_df.iloc[:, :-1]\n",
-    "print(wine_df.iloc[:, :-1].shape[1]) # total number of predictor variables in data set\n",
+    "print(\"Total number of predictor variables in data set :\",wine_df.iloc[:, :-1].shape[1]) # total number of predictor variables in data set\n",
     "#print(X.columns) "
    ]
   },
@@ -294,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 50,
    "id": "4045db0d",
    "metadata": {},
    "outputs": [
@@ -343,18 +281,20 @@
        "[178 rows x 14 columns]>"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# self exploration of data\n",
+    "wine_df.describe\n",
     "wine_df.isna().sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 51,
    "id": "cc899b59",
    "metadata": {},
    "outputs": [
@@ -432,7 +372,7 @@
    "source": [
     "**Answer**\n",
     "\n",
-    "the response variable Class, is a categorical variable and not numeric. We do standardization primarily for continuous numeric variables to ensure fair contribution on scale."
+    "Standardizing response variable can complicate interpretation and obscure important information, which is why it is often avoided in traditional statistical analysis."
    ]
   },
   {
@@ -441,17 +381,6 @@
    "metadata": {},
    "source": [
     "(iii) A second essential step is to set a random seed. Do so below (Hint: use the random.seed function). Why is setting a seed important? Is the particular seed value important? Why or why not?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "id": "5ef2d5ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Do not touch\n",
-    "random.seed(123)"
    ]
   },
   {
@@ -477,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "72c101f2",
    "metadata": {},
    "outputs": [
@@ -485,8 +414,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training  data set shapes: (130, 13) (130,)\n",
-      "Testing set shapes: (48, 13) (48,)\n"
+      "Training  data set shapes: (140, 13) (140,)\n",
+      "Testing set shapes: (38, 13) (38,)\n"
      ]
     }
    ],
@@ -499,13 +428,11 @@
     "# Your code here...\n",
     "# Define the training set for X (predictors)\n",
     "training_X = predictors_standardized[split]\n",
-    "\n",
-    "# Define the training set for Y (response)\n",
-    "training_Y = wine_df.loc[split, 'class']\n",
-    "\n",
     "# Define the testing set for X (predictors)\n",
     "testing_X = predictors_standardized[~split]\n",
     "\n",
+    "# Define the training set for Y (response)\n",
+    "training_Y = wine_df.loc[split, 'class']\n",
     "# Define the testing set for Y (response)\n",
     "testing_Y = wine_df.loc[~split, 'class']\n",
     "\n",
@@ -534,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 53,
    "id": "08818c64",
    "metadata": {},
    "outputs": [
@@ -542,7 +469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best value of n_neighbors is : 12\n"
+      "The best value of n_neighbors is : 8\n"
      ]
     }
    ],
@@ -573,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 55,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -581,13 +508,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy of test set is: 0.9375\n"
+      "The accuracy of test set is: 0.9474\n"
      ]
     }
    ],
    "source": [
     "# Your code here...\n",
-    "\n",
     "knn_opt = KNeighborsClassifier(n_neighbors=best_n_neighbors) # Initialize KNN classifier with the best n_neighbors\n",
     "knn_opt.fit(training_X, training_Y) # Train the model on the entire training set\n",
     "y_pred = knn_opt.predict(testing_X) # Make predictions on the test set\n",
