--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "id": "3a2419e7",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,9 @@
    "id": "f67e57ab",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "Plot 1 - The association between the acceleration and mpg can be characterized as a positive association. \n",
+    "\n",
+    "Plot 2 - The association between the number of cylinders in a vehicle (cylinder count) and miles per gallon (MPG) can be characterized as a negative association. We can observe as the number of cylinders in an engine increases, the MPG tends to decrease."
    ]
   },
   {
@@ -437,19 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training  data set shapes: (98, 6) (98,)\n",
+      "Testing set shapes: (294, 6) (294,)\n"
+     ]
     }
    ],
    "source": [
@@ -462,7 +462,9 @@
     "\n",
     "# Split the sacramento dataset into 75% training data and 25% test data\n",
     "X_train,X_test,y_train,y_test=train_test_split(predictors,target,test_size = 0.75,random_state=42)\n",
-    "X_train.shape[0] == y_train.shape[0]\n"
+    "\n",
+    "print(\"Training  data set shapes:\", X_train.shape, y_train.shape)\n",
+    "print(\"Testing set shapes:\", X_test.shape, y_test.shape)\n"
    ]
   },
   {
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "id": "ac1e1117",
    "metadata": {},
    "outputs": [
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -541,7 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.667110010509482\n"
+      "RMSPE test error measurement : 3.667110010509482\n"
      ]
     }
    ],
