Added Standardization to model the data

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -45,17 +45,20 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn import set_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
+    "\n",
+    "set_config(transform_output=\"pandas\")\n",
     "\n",
     "# Load the Auto MPG dataset\n",
     "mpg_data = sns.load_dataset('mpg')\n",
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -158,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "id": "3a2419e7",
    "metadata": {},
    "outputs": [
@@ -236,7 +239,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -439,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
@@ -453,12 +456,13 @@
     }
    ],
    "source": [
-    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "# Your answer here...\n",
     "#np.random.seed(42)\n",
     "predictors = mpg_data[feature_names].copy()\n",
     "\n",
     "target = mpg_data['mpg'].copy()\n",
+    "predictors = StandardScaler().fit_transform(predictors)\n",
     "\n",
     "# Split the sacramento dataset into 75% training data and 25% test data\n",
     "X_train,X_test,y_train,y_test=train_test_split(predictors,target,test_size = 0.75,random_state=42)\n",
@@ -477,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
    "id": "ac1e1117",
    "metadata": {},
    "outputs": [
@@ -486,12 +490,12 @@
      "output_type": "stream",
      "text": [
       "      predictor     slope  intercept\n",
-      "0  acceleration -0.170184   0.935858\n",
-      "1     cylinders -0.044603   0.935858\n",
-      "2  displacement -0.001888   0.935858\n",
-      "3    horsepower -0.016813   0.935858\n",
-      "4    model_year  0.617174   0.935858\n",
-      "5        weight -0.006396   0.935858\n"
+      "0  acceleration -0.468914  23.770156\n",
+      "1     cylinders -0.075986  23.770156\n",
+      "2  displacement -0.197356  23.770156\n",
+      "3    horsepower -0.646326  23.770156\n",
+      "4    model_year  2.270605  23.770156\n",
+      "5        weight -5.426185  23.770156\n"
      ]
     }
    ],
@@ -535,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -543,7 +547,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSPE test error measurement : 3.667110010509482\n"
+      "RMSPE test error measurement : 3.6671100105094885\n"
      ]
     }
    ],
