--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 136,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 137,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 138,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 139,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 140,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 141,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 142,
    "id": "3a2419e7",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 143,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -391,9 +391,9 @@
    "id": "f67e57ab",
    "metadata": {},
    "source": [
-    "Plot 1 - The association between the acceleration and mpg can be characterized as a positive association. \n",
+    "Positive association - acceleration and model_year\n",
     "\n",
-    "Plot 2 - The association between the number of cylinders in a vehicle (cylinder count) and miles per gallon (MPG) can be characterized as a negative association. We can observe as the number of cylinders in an engine increases, the MPG tends to decrease."
+    "Negative association - cylinders, displacement, horsepower and weight\n"
    ]
   },
   {
@@ -409,7 +409,12 @@
    "id": "843f9eef",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "A regression plotted line visually represents the relationship between an independent variable(s) (predictor) and a dependent variable (response) in a dataset. It defines the linear relationship between each of the numeric independent variables ( acceleration, cylinders, displacement, horsepower, model_year, and weight) and the dependent variable (mpg).\n",
+    "\n",
+    "    - Positive Slope indicates that as the independent variable increases, the dependent variable also tends to increase.\n",
+    "    - Negative Slope suggests that as the independent variable increases, the dependent variable tends to decrease.\n",
+    "    - The steepness of the slope reflects the strength of the relationship. A steeper slope indicates a stronger association, while a flatter slope indicates a weaker association.\n",
+    "    - The line can be used to make predictions about the dependent variable for given values of the independent variable"
    ]
   },
   {
@@ -425,7 +430,38 @@
    "id": "2ea782fc",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "No, Not all data points in the dataset are falling perfectly along the plotted line. Reasons for Deviations -\n",
+    "\n",
+    "    Natural Variability:\n",
+    "    Real-world data often contains inherent variability due to many factors. For instance, human behavior, environmental conditions, and measurement errors can all contribute to this variability.\n",
+    "\n",
+    "    Model Limitations:\n",
+    "    The chosen regression model may not perfectly capture the relationship between the variables. For example, if the true relationship is nonlinear, using a linear regression model will lead to significant deviations.\n",
+    "    \n",
+    "    Outliers:\n",
+    "    Some data points may be significantly different from others (outliers), which can skew the regression line and result in large deviations.\n",
+    "\n",
+    "    Measurement Errors:\n",
+    "    Errors in data collection or measurement can lead to discrepancies between observed values and those predicted by the model.\n",
+    "\n",
+    "    \n",
+    "Deviations Indicates:\n",
+    "\n",
+    "    Strength of Relationship:\n",
+    "\n",
+    "    The amount of scatter around the regression line indicates the strength of the relationship. If the points are close to the line, it suggests a strong relationship. A wide spread indicates a weaker relationship.\n",
+    "\n",
+    "    Goodness of Fit:\n",
+    "\n",
+    "    Metrics like R-squared can quantify how well the model explains the variability in the data. A higher R-squared value indicates that the model captures a larger portion of the variability.\n",
+    "\n",
+    "    Nature of the Relationship:\n",
+    "\n",
+    "    If the deviations exhibit a specific pattern (e.g., a curve), it may indicate that a different model (such as polynomial regression) might be more appropriate.\n",
+    "\n",
+    "    Impact of Outliers:\n",
+    "\n",
+    "    Outliers can indicate special cases or errors in the data collection process. They may need to be investigated separately to understand their influence on the overall analysis.\n"
    ]
   },
   {
@@ -442,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 144,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
@@ -450,22 +486,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training  data set shapes: (98, 6) (98,)\n",
-      "Testing set shapes: (294, 6) (294,)\n"
+      "Training  data set shapes: (294, 6) (294,)\n",
+      "Testing set shapes: (98, 6) (98,)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "# Your answer here...\n",
-    "#np.random.seed(42)\n",
-    "predictors = mpg_data[feature_names].copy()\n",
+    "np.random.seed(123)\n",
+    "predictors = mpg_data[feature_names] # feature_names variable has excluded the 'mpg' (target variable) and non-numeric columns from the feature names\n",
     "\n",
-    "target = mpg_data['mpg'].copy()\n",
-    "predictors = StandardScaler().fit_transform(predictors)\n",
+    "target = mpg_data['mpg']\n",
+    "predictors = StandardScaler().fit_transform(predictors) # standardize the predictors\n",
     "\n",
     "# Split the sacramento dataset into 75% training data and 25% test data\n",
-    "X_train,X_test,y_train,y_test=train_test_split(predictors,target,test_size = 0.75,random_state=42)\n",
+    "X_train,X_test,y_train,y_test=train_test_split(predictors,target,train_size=0.75,\n",
+    "                                               test_size = 0.25,random_state=42)\n",
     "\n",
     "print(\"Training  data set shapes:\", X_train.shape, y_train.shape)\n",
     "print(\"Testing set shapes:\", X_test.shape, y_test.shape)\n"
@@ -481,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 145,
    "id": "ac1e1117",
    "metadata": {},
    "outputs": [
@@ -490,23 +527,23 @@
      "output_type": "stream",
      "text": [
       "      predictor     slope  intercept\n",
-      "0  acceleration -0.468914  23.770156\n",
-      "1     cylinders -0.075986  23.770156\n",
-      "2  displacement -0.197356  23.770156\n",
-      "3    horsepower -0.646326  23.770156\n",
-      "4    model_year  2.270605  23.770156\n",
-      "5        weight -5.426185  23.770156\n"
+      "0  acceleration  0.158674  23.536923\n",
+      "1     cylinders -0.272820  23.536923\n",
+      "2  displacement  0.039029  23.536923\n",
+      "3    horsepower -0.072989  23.536923\n",
+      "4    model_year  2.804418  23.536923\n",
+      "5        weight -5.477412  23.536923\n"
      ]
     }
    ],
    "source": [
     "# Your code here ...\n",
     "\n",
-    "numeric_predictors = predictors\n",
-    "\n",
-    "#print(numeric_predictors)\n",
+    "numeric_predictors = X_train\n",
+    "#Linear regression model\n",
     "lm = LinearRegression()\n",
     "\n",
+    "# fit the model\n",
     "lm.fit(\n",
     "    X_train, y_train\n",
     ")\n",
@@ -539,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 146,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -547,17 +584,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSPE test error measurement : 3.6671100105094885\n"
+      "Root Mean Square Error (RMSE): 3.185475\n"
      ]
     }
    ],
    "source": [
     "# Your code here ...\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from math import sqrt\n",
-    "y_predicted = lm.predict(X_test)\n",
-    "rmse = sqrt(mean_squared_error(y_true=y_test,y_pred=y_predicted))\n",
-    "print(\"RMSPE test error measurement :\", rmse)"
+    "\n",
+    "# Predict on the test data set\n",
+    "y_predicted = lm.predict(X_test) \n",
+    "\n",
+    "# Calculate RMSPE for the multivariable model.\n",
+    "lm_mult_test_RMSPE = mean_squared_error(\n",
+    "    y_true=y_test,\n",
+    "    y_pred=y_predicted\n",
+    ")**(1/2)\n",
+    "\n",
+    "print(f\"Root Mean Square Error (RMSE): {lm_mult_test_RMSPE:.6f}\")\n"
    ]
   },
   {
