--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -148,7 +148,9 @@
    "id": "6d759089",
    "metadata": {},
    "source": [
-    "mpg is a continuous variable. It represents fuel efficiency and can take on a wide range of values, including decimals. After looking at describe information for mpg variable it is observed, the minimum value is 9 and maximum is 46, but on average it is 23.44 with a standard deviation of 7.8\n"
+    "mpg is a continuous variable. It represents fuel efficiency and can take on a wide range of values, including decimals. After looking at describe information for mpg variable it is observed, the minimum value is 9 and maximum is 46, but on average it is 23.44 with a standard deviation of 7.8 \n",
+    "\n",
+    "The datatype used for mpg in dataset is Float64, which refers to a floating point number(number that can have a fractional part) and 64 indicate the number of bits used to represent this number in memory is 64 bits or 8 bytes.This allows higher degree of precision."
    ]
   },
   {
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 157,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -169,24 +171,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "116    230.0\n",
-      "95     225.0\n",
-      "13     225.0\n",
-      "8      225.0\n",
-      "6      220.0\n",
-      "Name: horsepower, dtype: float64\n"
+      "Using sort values function to find largest top 5 value of horsepower in dataset :\n",
+      " \n",
+      "\n",
+      "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+      "116  16.0          8         400.0       230.0    4278           9.5   \n",
+      "95   12.0          8         455.0       225.0    4951          11.0   \n",
+      "13   14.0          8         455.0       225.0    3086          10.0   \n",
+      "8    14.0          8         455.0       225.0    4425          10.0   \n",
+      "6    14.0          8         454.0       220.0    4354           9.0   \n",
+      "\n",
+      "     model_year origin                      name  \n",
+      "116          73    usa        pontiac grand prix  \n",
+      "95           73    usa  buick electra 225 custom  \n",
+      "13           70    usa   buick estate wagon (sw)  \n",
+      "8            70    usa          pontiac catalina  \n",
+      "6            70    usa          chevrolet impala  \n",
+      "\n",
+      "#### Other way is using nlargest###\n",
+      "\n",
+      "Using nlargest to find top 5 largest value of horsepower in data set : \n",
+      "\n",
+      "       mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+      "116  16.0          8         400.0       230.0    4278           9.5   \n",
+      "8    14.0          8         455.0       225.0    4425          10.0   \n",
+      "13   14.0          8         455.0       225.0    3086          10.0   \n",
+      "95   12.0          8         455.0       225.0    4951          11.0   \n",
+      "6    14.0          8         454.0       220.0    4354           9.0   \n",
+      "\n",
+      "     model_year origin                      name  \n",
+      "116          73    usa        pontiac grand prix  \n",
+      "8            70    usa          pontiac catalina  \n",
+      "13           70    usa   buick estate wagon (sw)  \n",
+      "95           73    usa  buick electra 225 custom  \n",
+      "6            70    usa          chevrolet impala  \n"
      ]
     }
    ],
    "source": [
     "# Your answer here... \n",
-    "#print(mpg_data.horsepower.unique())\n",
+    "print(\"Using sort values function to find largest top 5 value of horsepower in dataset :\\n \\n\")\n",
     "sorted_df = mpg_data.sort_values(by='horsepower', ascending=False)\n",
     "\n",
     "# Selecting the top 5 rows\n",
     "top_5 = sorted_df.head(5)\n",
     "\n",
-    "print(top_5['horsepower'])"
+    "print(top_5)\n",
+    "\n",
+    "print(\"\\n#### Other way is using nlargest###\\n\")\n",
+    "\n",
+    "print(\"Using nlargest to find top 5 largest value of horsepower in data set : \\n\\n\", mpg_data.nlargest(5,'horsepower'))"
    ]
   },
   {
