Standardization of features is commented as Holly mentioned in LR we dont need to standardize them

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -526,13 +526,13 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
+    "#from sklearn.preprocessing import StandardScaler\n",
     "# Your answer here...\n",
     "np.random.seed(123)\n",
     "predictors = mpg_data[feature_names] # feature_names variable has excluded the 'mpg' (target variable) and non-numeric columns from the feature names\n",
     "\n",
     "target = mpg_data['mpg']\n",
-    "predictors = StandardScaler().fit_transform(predictors) # standardize the predictors\n",
+    "#predictors = StandardScaler().fit_transform(predictors) # standardize the predictors\n",
     "\n",
     "# Split the sacramento dataset into 75% training data and 25% test data\n",
     "X_train,X_test,y_train,y_test=train_test_split(predictors,target,train_size=0.75,\n",
