--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 158,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 159,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 160,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 161,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 162,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 163,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 164,
    "id": "3a2419e7",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 165,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 166,
    "id": "399225f4",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 167,
    "id": "ac1e1117",
    "metadata": {},
    "outputs": [
@@ -561,12 +561,12 @@
      "output_type": "stream",
      "text": [
       "      predictor     slope  intercept\n",
-      "0  acceleration  0.158674  23.536923\n",
-      "1     cylinders -0.272820  23.536923\n",
-      "2  displacement  0.039029  23.536923\n",
-      "3    horsepower -0.072989  23.536923\n",
-      "4    model_year  2.804418  23.536923\n",
-      "5        weight -5.477412  23.536923\n"
+      "0  acceleration  0.057588 -15.047371\n",
+      "1     cylinders -0.160143 -15.047371\n",
+      "2  displacement  0.000373 -15.047371\n",
+      "3    horsepower -0.001899 -15.047371\n",
+      "4    model_year  0.762270 -15.047371\n",
+      "5        weight -0.006457 -15.047371\n"
      ]
     }
    ],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 170,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Square Error (RMSE): 3.185475\n"
+      "3.1854749513391525\n",
+      "Root Mean Square Error (RMSE): 3.185474951\n"
      ]
     }
    ],
